--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "serve": "parcel serve index.html",
-    "build": "parcel build index.html"
+    "serve": "parcel serve src/index.html",
+    "build": "parcel build src/index.html"
   },
   "devDependencies": {
     "parcel": "^2.9.1"
