--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -7,14 +7,15 @@
   "orientation": "portrait",
   "scope": "reworn.emmaparente.ch/",
   "start_url": "reworn.emmaparente.ch/",
+  "id": "/?source=pwa&v=1",
   "icons": [
     {
-      "src": "icons/android-chrome-192x192.png",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/android-chrome-512x512.png",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
